Fix spacing and size, add max height

--- a/site/src/components/icon-preview/IconPreview.module.css
+++ b/site/src/components/icon-preview/IconPreview.module.css
@@ -16,6 +16,11 @@
   flex: 1;
 }
 
+.gridContainer {
+  max-height: 800px;
+  overflow: auto;
+}
+
 .iconCard {
   padding-top: var(--salt-spacing-300);
   padding-inline: var(--salt-spacing-25);
